--- a/boot/stage2/Makefile
+++ b/boot/stage2/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -nostdlib -Wall -m32 -march=i386 -fno-pie -fno-stack-protector -ffreest
 all: stage2
 
 stage2: stage2.ocpp
-	ld -m elf_i386 --oformat binary -Ttext 1000 $^ -o $@
+	ld -m elf_i386 --oformat binary -T linker.ld -nostdlib $^ -o $@
 
 %.ocpp: %.cpp
 	$(CC) $(CFLAGS) -c $< -o $@
