giant bunch of useless crap

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -10,8 +10,8 @@ stage2r:
 	$(MAKE) -C stage2
 
 comp: stage1 stage2
-	#cat stage1 stage2/stage2 > boot
-	cat stage1 > boot
+	cat stage1 stage2/stage2 > boot
+	#cat stage1 > boot
 
 %.ocpp: %.cpp $(HEADERS_CPP)
 	$(CC) $(CFLAGS) -c $< -o $@
