stage2 loads and starts kernel now

--- a/boot/stage2/Makefile
+++ b/boot/stage2/Makefile
@@ -1,7 +1,10 @@
 CC = g++
 CFLAGS = -nostdlib -Wall -m32 -march=i386 -fno-pie -fno-stack-protector -ffreestanding
 
-all: stage2
+all: stage2 stage2pad
+
+stage2pad: 
+	dd if=/dev/zero of=stage2 bs=1 count=1 seek=10239
 
 stage2: stage2.ocpp gdt.oasm gdt.ocpp paging.ocpp paging.oasm stdio.ocpp hdd.ocpp
 	ld -m elf_i386 --oformat binary -T linker.ld -nostdlib $^ -o $@
