--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,4 @@ jobs:
         uses:  actions/upload-artifact@v2
         with:
             name: image
-            path: ${{runner.workspace}}/shitOS.img
+            path: ${{runner.workspace}}/shitOS/shitOS.img
