--- a/shitshell/Makefile
+++ b/shitshell/Makefile
@@ -1,16 +1,16 @@
-CC = g++
+CC = gcc
 CFLAGS = -nostdlib -Wall -m32 -march=i386 -fno-pie -fno-stack-protector -ffreestanding
 
 all: shitshell
 
-shitshell: shitshell.oasm
+shitshell: start.oasm main.oc syscall.oasm syscall.oc stdlib.oc
 	ld -m elf_i386 -nostdlib $^ -o $@
 
-%.ocpp: %.cpp
+%.oc: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 %.oasm: %.asm
 	nasm -f elf32 -o $@ $^
 
 clean:
-	rm -f shitshell *.oasm *.ocpp *.o
+	rm -f shitshell *.oasm *.oc *.o
