--- a/shitshell/Makefile
+++ b/shitshell/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -nostdlib -Wall -m32 -march=i386 -fno-pie -fno-stack-protector -ffreest
 
 all: shitshell
 
-shitshell: start.oasm main.oc syscall.oasm syscall.oc stdlib.oc
+shitshell: start.oasm start.oc main.oc syscall.oasm syscall.oc stdlib.oc
 	ld -m elf_i386 -nostdlib $^ -o $@
 
 %.oc: %.c
