--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -43,7 +43,7 @@ jobs:
         uses:  actions/upload-artifact@v2
         with:
             name: image
-            path: ${{runner.workspace}}/shitOS/shitOS.img
+            path: ${{runner.workspace}}/shitOS/shitOS_app.img
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
