makefile improvements ig

--- a/boot/stage2/Makefile
+++ b/boot/stage2/Makefile
@@ -1,9 +1,8 @@
 CC = g++
 CFLAGS = -nostdlib -Wall -m32 -march=i386 -fno-pie -fno-stack-protector -ffreestanding
 
-all: stage2 stage2pad
-
-stage2pad: 
+all: 
+	$(MAKE) stage2
 	dd if=/dev/zero of=stage2 bs=1 count=1 seek=10239
 
 stage2: stage2.ocpp gdt.oasm gdt.ocpp paging.ocpp paging.oasm stdio.ocpp hdd.ocpp stdlib.ocpp
