--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -48,6 +48,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: install dependencies
         run: |
