move files to arch/x86

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,15 +1,15 @@
 CC = g++
 CFLAGS = -nostdlib -Wall -m32 -march=i386 -fno-pie -fno-stack-protector -ffreestanding -fno-exceptions -O3 -I.
 
-HEADERS_CPP = $(wildcard *.h **/*.h)
+HEADERS_CPP = $(shell find . -name "*.h") # fuck it, lets just do this..
 
-SOURCES_CPP = $(wildcard *.cpp **/*.cpp)
+SOURCES_CPP = $(shell find . -name "*.cpp")
 
 OBJECTS_CPP = $(patsubst %.cpp, %.ocpp, $(SOURCES_CPP))
 
-HEADERS_ASM = $(wildcard *.inc **/*.inc)
+HEADERS_ASM = $(shell find . -name "*.inc")
 
-SOURCES_ASM = $(wildcard *.asm **/*.asm)
+SOURCES_ASM = $(shell find . -name "*.asm")
 
 OBJECTS_ASM = $(patsubst %.asm, %.oasm, $(SOURCES_ASM))
 
@@ -19,7 +19,7 @@ kernel: $(OBJECTS_ASM) $(OBJECTS_CPP)
 	ld -m elf_i386 --oformat binary -T linker.ld -nostdlib $^ -o $@
 
 %.ocpp: %.cpp $(HEADERS_CPP)
-	$(CC) $(CFLAGS) -c $< -o $@ 
+	$(CC) $(CFLAGS) -c $< -o $@
 
 %.oasm: %.asm
 	nasm -f elf -o $@ $^ 
