--- a/boot/stage2/Makefile
+++ b/boot/stage2/Makefile
@@ -2,17 +2,19 @@ CC = g++
 CFLAGS = -nostdlib -Wall -m32 -march=i386 -fno-pie -fno-stack-protector -ffreestanding
 
 all: 
-	$(MAKE) stage2
-	dd if=/dev/zero of=stage2 bs=1 count=1 seek=10239
+	@$(MAKE) stage2
+	@dd status=none if=/dev/zero of=stage2 bs=1 count=1 seek=10239
 
 stage2: stage2.ocpp gdt.oasm gdt.ocpp paging.ocpp paging.oasm stdio.ocpp hdd.ocpp stdlib.ocpp
-	ld -m elf_i386 --oformat binary -T linker.ld -nostdlib $^ -o $@
+	@ld -m elf_i386 --oformat binary -T linker.ld -nostdlib $^ -o $@
 
 %.ocpp: %.cpp
-	$(CC) $(CFLAGS) -c $< -o $@
+	@echo "-> compiling boot/stage2/$<"
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 %.oasm: %.asm
-	nasm -f elf -o $@ $^ 
+	@echo "-> compiling boot/stage2/$<"
+	@nasm -f elf -o $@ $^
 
 clean:
-	rm -f stage2 *.oasm *.ocpp *.o
+	@rm -f stage2 *.oasm *.ocpp *.o
