--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -I. -O3 -nostdlib -m32 -march=i386 -fno-pie -fno-stack-protector -ffreestanding -fno-exceptions -Wall -Wno-pointer-arith
+CFLAGS = -I. -O3 -nostdlib -m32 -march=i386 -fno-pie -fno-stack-protector -ffreestanding -fno-exceptions -fno-finite-loops -Wall -Wno-pointer-arith
 
 HEADERS_CPP = $(shell find . -name "*.h") # fuck it, lets just do this..
 
