--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -34,7 +34,7 @@ jobs:
       - name: install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common
+          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools
       - name: Run build-wrapper
         run: |
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean all
@@ -54,7 +54,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common
+          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools
       - name: compile
         run: cd $GITHUB_WORKSPACE && make
 
