--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
 sonar.cfamily.cache.enabled=false
+sonar.exclusions = kernel/scripts/**
