--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -37,7 +37,7 @@ jobs:
           sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools
       - name: Run build-wrapper
         run: |
-          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean all
+          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean all MAKE_ARCH=x86
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -56,7 +56,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools
       - name: compile
-        run: cd $GITHUB_WORKSPACE && make
+        run: cd $GITHUB_WORKSPACE && make MAKE_ARCH=x86
 
       - name: upload image
         uses:  actions/upload-artifact@v2
