--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -54,9 +54,15 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools
+          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86
       - name: compile
         run: cd $GITHUB_WORKSPACE && make MAKE_ARCH=x86
+
+      - name: run
+        run: |
+          wget https://gist.githubusercontent.com/theverygaming/ea45ead0700c7b3c28db89e94f74abf8/raw/exitforce0.cpp
+          g++ exitforce0.cpp -o exitforce0
+          cd $GITHUB_WORKSPACE && ./exitforce0 timeout 30 qemu-system-x86_64 shitOS.iso -nographic
 
       - name: upload image
         uses:  actions/upload-artifact@v2
