--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -34,7 +34,11 @@ jobs:
       - name: install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools
+          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools llvm-dev libclang-dev clang
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          rustup default stable-x86_64-unknown-linux-gnu
+          cargo install bindgen
+          cd $GITHUB_WORKSPACE && rustup override set stable-i686-unknown-linux-gnu
       - name: Run build-wrapper
         run: |
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean all MAKE_ARCH=x86
@@ -54,7 +58,11 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86
+          sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86 llvm-dev libclang-dev clang
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          rustup default stable-x86_64-unknown-linux-gnu
+          cargo install bindgen
+          cd $GITHUB_WORKSPACE && rustup override set stable-i686-unknown-linux-gnu
       - name: compile
         run: cd $GITHUB_WORKSPACE && make MAKE_ARCH=x86
 
