--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -14,7 +14,7 @@ config_gen:
 
 clean:
 	@rm -f kernel.bin
-	@find . \( -name '*.oasm' -o -name '*.ocpp' -o -name '*.o' -o -name '*.os' \) -type f -delete
+	@find . \( -name '*.oasm' -o -name '*.ocpp' -o -name '*.ors' -o -name '*.rlib' -o -name '*.o' -o -name '*.os' \) -type f -delete
 	@$(MAKE) --no-print-directory -C scripts/shconfig clean
 
 proper: clean
