--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -35,10 +35,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools llvm-dev libclang-dev clang
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          rustup default stable-x86_64-unknown-linux-gnu
-          cargo install bindgen
-          cd $GITHUB_WORKSPACE && rustup override set stable-i686-unknown-linux-gnu
+        #curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+        #rustup default stable-x86_64-unknown-linux-gnu
+        #cargo install bindgen-cli  --force
+        #cd $GITHUB_WORKSPACE && rustup override set stable-i686-unknown-linux-gnu
       - name: Run build-wrapper
         run: |
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean all MAKE_ARCH=x86
@@ -59,10 +59,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86 llvm-dev libclang-dev clang
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          rustup default stable-x86_64-unknown-linux-gnu
-          cargo install bindgen
-          cd $GITHUB_WORKSPACE && rustup override set stable-i686-unknown-linux-gnu
+        #curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+        #rustup default stable-x86_64-unknown-linux-gnu
+        #cargo install bindgen-cli --force
+        #cd $GITHUB_WORKSPACE && rustup override set stable-i686-unknown-linux-gnu
       - name: compile
         run: cd $GITHUB_WORKSPACE && make MAKE_ARCH=x86
 
