--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ kernel/config_gen
 kernel/scripts/shbuild
 startup/startup
 kernel/rust/bindings.rs
+startup/aarch64/startup.elf
+startup/aarch64/startup
