--- a/grub/rootfs/boot/limine.cfg
+++ b/grub/rootfs/boot/limine.cfg
@@ -2,6 +2,10 @@ DEFAULT_ENTRY=1
 TIMEOUT=0
 VERBOSE=yes
 
+# Terminal related settings
+#TERM_WALLPAPER=${WALLPAPER_PATH}
+TERM_BACKDROP=008080
+
 :shitOS
     PROTOCOL=multiboot2
     KERNEL_PATH=boot:///boot/kernel.bin
