--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -64,8 +64,8 @@ alldefconfig:
 
 # clean targets
 clean:
-	@rm -f kernel.o kernel.bin symtab.s
-	@find . \( -name '*.oasm' -o -name '*.ocpp' -o -name '*.ors' -o -name '*.rlib' -o -name '*.o' -o -name '*.os' \) -type f -delete
+	@rm -f kernel.o kernel.bin symtab.s symtab.os kernel_partial.o
+	@find ./arch ./drivers ./fs ./include ./kernel ./net ./rust \( -name '*.oasm' -o -name '*.onasm' -o -name '*.ocpp' -o -name '*.ors' -o -name '*.rlib' -o -name '*.o' -o -name '*.os' \) -type f -delete
 
 proper: clean
 	@$(MAKE) --quiet -C scripts/kconfig clean
