broken sys_set_thread_area

--- a/kernel/arch/x86/Makefile
+++ b/kernel/arch/x86/Makefile
@@ -1,4 +1,4 @@
 obj-y += drivers/net/rtl8139.ocpp drivers/keyboard.ocpp drivers/pci.ocpp drivers/pic_8259.ocpp drivers/rtc.ocpp drivers/serial.ocpp drivers/text80x25.ocpp
 obj-y += generic/cpu.ocpp generic/devices.ocpp generic/memory.ocpp generic/textoutput.ocpp
-obj-y += archinit.ocpp cpubasics.ocpp cpuid.ocpp elf.ocpp gdt.ocpp idt.ocpp isr.ocpp isrs.ocpp memorymap.ocpp modelf.ocpp multiboot2.ocpp multitasking.ocpp paging.ocpp simd.ocpp symbols.ocpp syscall.ocpp syscalls.ocpp tss.ocpp
+obj-y += archinit.ocpp cpubasics.ocpp cpuid.ocpp elf.ocpp gdt.ocpp ldt.ocpp idt.ocpp isr.ocpp isrs.ocpp memorymap.ocpp modelf.ocpp multiboot2.ocpp multitasking.ocpp paging.ocpp simd.ocpp symbols.ocpp syscall.ocpp syscalls.ocpp tss.ocpp
 obj-y += gdt.onasm idt.onasm isr.onasm paging.onasm simd.onasm
