--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -37,7 +37,7 @@ jobs:
           sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools llvm-dev libclang-dev clang python3  pkg-config flex bison
       - name: Run build-wrapper
         run: |
-          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean x86-config all MAKE_ARCH=x86
+          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean alldefconfig all MAKE_ARCH=x86
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -56,7 +56,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86 llvm-dev libclang-dev clang python3 pkg-config flex bison
       - name: compile
-        run: cd $GITHUB_WORKSPACE && make x86-config all MAKE_ARCH=x86
+        run: cd $GITHUB_WORKSPACE && make alldefconfig all MAKE_ARCH=x86
 
       - name: run
         run: |
