use macros for endianness

--- a/kernel/net/Makefile
+++ b/kernel/net/Makefile
@@ -1,1 +1,1 @@
-obj-$(ENABLE_NETWORKING) := arp.ocpp ethernet.ocpp icmp.ocpp ip.ocpp stack.ocpp
+obj-$(CONFIG_ENABLE_NETWORKING) := arp.ocpp ethernet.ocpp icmp.ocpp ip.ocpp stack.ocpp
