--- a/kernel/arch/x86/Makefile
+++ b/kernel/arch/x86/Makefile
@@ -1,5 +1,6 @@
 obj-$(CONFIG_ENABLE_NETWORKING) += drivers/net/rtl8139.ocpp
 obj-$(CONFIG_ENABLE_FTRACE) += trace.ocpp
+obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
 
 obj-y += drivers/keyboard.ocpp drivers/pci.ocpp drivers/pic_8259.ocpp drivers/rtc.ocpp drivers/serial.ocpp drivers/text80x25.ocpp
 obj-y += generic/cpu.ocpp generic/devices.ocpp generic/memory.ocpp generic/textoutput.ocpp
