new printf + ubsan option

--- a/kernel/kernel/Makefile
+++ b/kernel/kernel/Makefile
@@ -1,1 +1,3 @@
-obj-y += cpp.ocpp debug.ocpp framebuffer.ocpp kernel.ocpp log.ocpp panic.ocpp psf.ocpp scheduler.ocpp stdio.ocpp stdlib.ocpp time.ocpp
+obj-y += cpp.ocpp debug.ocpp framebuffer.ocpp kernel.ocpp log.ocpp psf.ocpp scheduler.ocpp stdio.ocpp stdlib.ocpp time.ocpp
+
+obj-$(CONFIG_UBSAN) += ubsan.ocpp
