--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -3,7 +3,7 @@ include Makefile.version
 BUILD_SUBDIRS := kernel drivers fs net tests cppstd mm
 
 ifndef ARCH
-$(error must have ARCH enviroment variable set)
+$(error must have ARCH environment variable set)
 endif
 
 SRCARCH := $(ARCH)
