--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 name: Build
 on: [push, pull_request]
 jobs:
-  Build:
+  build-x86_32:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
