--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,17 +25,47 @@ jobs:
       - name: upload image
         uses: actions/upload-artifact@v3
         with:
-          name: image
+          name: image-x86_32
           path: ${{runner.workspace}}/shitOS/shitOS.iso
-
-      - name: count LOC
-        run: |
-          cd $GITHUB_WORKSPACE 
-          python3 tools/locchart.py >> $GITHUB_STEP_SUMMARY
 
       - name: check tests
         run: |
-          cd $GITHUB_WORKSPACE 
+          cd $GITHUB_WORKSPACE
+          python3 tools/testparser.py log.txt >> $GITHUB_STEP_SUMMARY
+          python3 tools/testparser.py log.txt -f
+  
+  build-aarch64:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - name: install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install qemu-system-arm llvm-dev libclang-dev clang python3 pkg-config flex bison gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
+
+      - name: compile
+        run: |
+          cd $GITHUB_WORKSPACE
+          make alldefconfig tests all MAKE_ARCH=aarch64 CROSS_COMPILE=aarch64-linux-gnu-
+
+      - name: run
+        run: |
+          cd $GITHUB_WORKSPACE
+          timeout 30 qemu-system-aarch64 -M raspi3b -nographic -serial mon:stdio -kernel kernel/kernel.o > log.txt || true
+          cat log.txt
+
+      - name: upload image
+        uses: actions/upload-artifact@v3
+        with:
+          name: image-aarch64
+          path: ${{runner.workspace}}/shitOS/kernel/kernel.o
+
+      - name: check tests
+        run: |
+          cd $GITHUB_WORKSPACE
           python3 tools/testparser.py log.txt >> $GITHUB_STEP_SUMMARY
           python3 tools/testparser.py log.txt -f
 
@@ -50,6 +80,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y codespell python3
+
+      - name: count LOC
+        run: |
+          cd $GITHUB_WORKSPACE 
+          python3 tools/locchart.py >> $GITHUB_STEP_SUMMARY
 
       - name: codespell
         run: cd $GITHUB_WORKSPACE && codespell -q 3 --builtin clear -S ./.git,./kernel/scripts -L useable || true
