aarch64 and malloc fixes

--- a/kernel/arch/aarch64/Makefile
+++ b/kernel/arch/aarch64/Makefile
@@ -2,6 +2,5 @@ obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
 
 obj-y += drivers/uart.ocpp
 obj-y += generic/cpu.ocpp generic/devices.ocpp generic/memory.ocpp generic/textoutput.ocpp
-obj-y += memmap.ocpp
-obj-y += archinit.ocpp 
+obj-y += archinit.ocpp memmap.ocpp exceptions.ocpp
 obj-y += startup.oS
