--- a/kernel/kernel/Makefile
+++ b/kernel/kernel/Makefile
@@ -1,3 +1,9 @@
 obj-y += cpp.ocpp debug.ocpp framebuffer.ocpp kernel.ocpp log.ocpp psf.ocpp scheduler.ocpp stdio.ocpp stdlib.ocpp time.ocpp
 
 obj-$(CONFIG_UBSAN) += ubsan.ocpp
+
+obj-$(CONFIG_ENABLE_BUILTIN_FONT) += unifont.bin.ocpp
+
+$(objtree)/%.bin.cpp: ../fonts/Unifont-APL8x16-15.0.01.psf
+	@echo "  BIN2C $<"
+	@python3 scripts/bin2c.py $< $@
