--- a/grub/rootfs/boot/limine.cfg
+++ b/grub/rootfs/boot/limine.cfg
@@ -9,3 +9,5 @@ TERM_BACKDROP=008080
 :shitOS
     PROTOCOL=multiboot2
     KERNEL_PATH=boot:///boot/kernel.bin
+
+    MODULE_PATH=boot:///boot/initramfs.bin
