--- a/kernel/arch/aarch64/Makefile
+++ b/kernel/arch/aarch64/Makefile
@@ -4,5 +4,5 @@ obj-d += drivers
 
 obj-y += drivers/uart.ocpp
 obj-y += generic/cpu.ocpp generic/devices.ocpp generic/memory.ocpp generic/textoutput.ocpp
-obj-y += archinit.ocpp memmap.ocpp exceptions.ocpp
+obj-y += archinit.ocpp archinit.oS memmap.ocpp exceptions.ocpp
 obj-y += startup.oS
