kfree cleanup (half broken)

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -90,4 +90,4 @@ jobs:
         run: cd $GITHUB_WORKSPACE && codespell -q 3 --builtin clear -S ./.git,./kernel/scripts -L useable || true
 
       - name: clang-format
-        run: cd $GITHUB_WORKSPACE && python3 tools/clang_format_check.py
+        run: cd $GITHUB_WORKSPACE && python3 tools/clang_check.py
