--- a/kernel/arch/aarch64/Makefile
+++ b/kernel/arch/aarch64/Makefile
@@ -2,7 +2,12 @@ obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
 
 obj-d += drivers
 
-obj-y += drivers/uart.ocpp
 obj-y += generic/cpu.ocpp generic/devices.ocpp generic/memory.ocpp generic/textoutput.ocpp
-obj-y += archinit.ocpp archinit.oS memmap.ocpp exceptions.ocpp
-obj-y += startup.oS
+obj-y += archinit.ocpp memmap.ocpp exceptions.ocpp
+
+
+extratargets-y += include/arch/limine.h
+
+$(objtree)/include/arch/limine.h:
+	@curl https://raw.githubusercontent.com/limine-bootloader/limine/trunk/limine.h -o $@
+	@sed -i 's/#include <stdint.h>/#include <types.h>\n#define NULL (void *)0/g' $@
